--- a/styles/mainstyles.css
+++ b/styles/mainstyles.css
@@ -5,5 +5,6 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  letter-spacing: 1px;
 }
 /*# sourceMappingURL=mainstyles.css.map */
