--- a/styles/mainstyles.scss
+++ b/styles/mainstyles.scss
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap");
+
+/* $ASS Variables */
+
+$textclr: #202020;
+
 /* Reset Styles */
 
 * {
@@ -6,4 +12,125 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   letter-spacing: 1px;
+}
+
+/* Global Styles */
+
+body {
+  color: $textclr;
+}
+
+/* Section Styles */
+
+#main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  animation: animate 5s linear infinite;
+  background-image: url(/Images/veggies.jpg);
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/* Box Class Styles */
+
+.input-box {
+  position: relative;
+  padding: 50px;
+  width: 360px;
+  height: 480px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 6px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
+/* Form Styles */
+
+.form {
+  position: relative;
+  width: 100%;
+
+  h2 {
+    font-weight: 900;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+  }
+
+  p {
+    margin-bottom: 20px;
+  }
+
+  a {
+    color: $textclr;
+  }
+}
+
+/* Input Box Styles */
+
+.inputBx {
+  position: relative;
+  width: 100%;
+  margin-bottom: 20px;
+
+  input {
+    width: 100%;
+    outline: none;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background: transparent;
+    padding: 8px 10px;
+    padding-left: 35px;
+    border-radius: 6px;
+    color: $textclr;
+    font-size: 1rem;
+
+    &::placeholder {
+      color: #686868;
+    }
+  }
+
+  i {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: $textclr;
+  }
+
+  input[type="submit"] {
+    position: relative;
+    transition: all 0.2s ease-in-out;
+    background: #202020;
+    color: white;
+    width: 100%;
+    padding: 8px 10px;
+    box-shadow: none;
+    font-weight: 500;
+    letter-spacing: 2px;
+    cursor: pointer;
+    margin-bottom: 20px;
+
+    &:active {
+      top: 2px;
+    }
+  }
+}
+
+/* Label Styles */
+
+.remember {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 30px;
+  cursor: pointer;
 }
