--- a/styles/mainstyles.css
+++ b/styles/mainstyles.css
@@ -157,4 +157,20 @@ body {
   color: #202020;
   top: -0.7rem;
 }
+
+.account-create {
+  position: relative;
+  width: 100%;
+  background: #139b13;
+  display: block;
+  border: 0;
+  color: white;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  padding: 8px 10px;
+  cursor: pointer;
+  font-weight: 700;
+  letter-spacing: 2px;
+  border-radius: 6px;
+}
 /*# sourceMappingURL=mainstyles.css.map */
