updated check styling

--- a/styles/mainstyles.css
+++ b/styles/mainstyles.css
@@ -166,6 +166,33 @@ body {
   width: 20px;
   background-color: #eee;
   border: 1px solid #c4c4c4;
+  /* On mouse-over, add a grey background-color */
+}
+
+.remember .checkmark:hover {
+  background: #ccc;
+}
+
+/* When the checkbox is checked, create a green background */
+.remember input:checked ~ .checkmark {
+  background-color: #139b13;
+}
+
+/* Show the checkmark when checked */
+.remember input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.remember .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 /* Seperator Styles */
