--- a/styles/mainstyles.css
+++ b/styles/mainstyles.css
@@ -137,62 +137,67 @@ body {
 }
 
 /* Remeber me checkbox Styles */
-.remember {
-  position: relative;
-  display: block;
-  margin-bottom: 30px;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  /* Hide the borowser's default checkbox */
-  /* Create custom checkbox */
-}
-
-.remember .remember input {
-  position: absolute;
+[type="checkbox"] {
   opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
 }
 
-.remember .checkmark {
+[type="checkbox"] + label {
+  position: relative;
+  padding-left: 25px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+[type="checkbox"] + label::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
-  height: 20px;
-  width: 20px;
-  background-color: #eee;
-  border: 1px solid #c4c4c4;
-  /* On mouse-over, add a grey background-color */
+  width: 18px;
+  height: 18px;
+  outline: 1px solid #ccc;
+  background: #fff;
 }
 
-.remember .checkmark:hover {
-  background: #ccc;
+[type="checkbox"]:checked + label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  outline: none;
+  background: #139b13;
 }
 
-/* When the checkbox is checked, create a green background */
-.remember input:checked ~ .checkmark {
-  background-color: #139b13;
+[type="checkbox"]:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  background-image: url(/Images/checkmark.png);
+  background-size: contain;
+  -webkit-transform: scake(1);
+          transform: scake(1);
+  opacity: 1;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-/* Show the checkmark when checked */
-.remember input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.remember .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+[type="checkbox"]:not(:checked) + label::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  background-image: url(/Images/checkmark.png);
+  background-size: contain;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  opacity: 0;
 }
 
 /* Seperator Styles */
