--- a/styles/mainstyles.scss
+++ b/styles/mainstyles.scss
@@ -110,7 +110,8 @@ body {
     font-weight: 500;
     letter-spacing: 2px;
     cursor: pointer;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 
     &:active {
       top: 2px;
@@ -122,6 +123,8 @@ body {
 
 [type="checkbox"] {
   opacity: 0;
+  margin-left: -15px;
+  margin-top: 10px;
 }
 
 [type="checkbox"] + label {
@@ -210,8 +213,19 @@ body {
   font-weight: 700;
   letter-spacing: 2px;
   border-radius: 6px;
+}
 
-  &:active {
-    border: 0;
-  }
+.return {
+  position: relative;
+  width: 100%;
+  background: #202020;
+  display: block;
+  border: 0;
+  color: white;
+  transition: all 0.2s ease-in-out;
+  padding: 10px 10px;
+  cursor: pointer;
+  font-weight: 700;
+  letter-spacing: 2px;
+  border-radius: 6px;
 }
