--- a/styles/mainstyles.scss
+++ b/styles/mainstyles.scss
@@ -211,6 +211,10 @@ body {
   border-radius: 6px;
 }
 
+.forgot {
+  margin-bottom: 20px;
+}
+
 .return {
   position: relative;
   width: 100%;
@@ -226,6 +230,7 @@ body {
   text-align: center;
   letter-spacing: 2px;
   border-radius: 6px;
+  margin-top: 20px;
 }
 
 .next {
@@ -243,4 +248,6 @@ body {
   text-align: center;
   letter-spacing: 2px;
   border-radius: 6px;
+  margin-bottom: 40px;
+  margin-top: 20px;
 }
