updated index.html styles

--- a/styles/mainstyles.scss
+++ b/styles/mainstyles.scss
@@ -209,6 +209,8 @@ body {
   font-weight: 700;
   letter-spacing: 2px;
   border-radius: 6px;
+  text-decoration: none;
+  text-align: center;
 }
 
 .forgot {
