--- a/styles/mainstyles.css
+++ b/styles/mainstyles.css
@@ -229,6 +229,8 @@ body {
   font-weight: 700;
   letter-spacing: 2px;
   border-radius: 6px;
+  text-decoration: none;
+  text-align: center;
 }
 
 .forgot {
