--- a/styles/mainstyles.css
+++ b/styles/mainstyles.css
@@ -298,5 +298,18 @@ body {
   height: 18px;
   border-radius: 100%;
   border: 2px solid green;
+  background: white;
+}
+
+[type="radio"]:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 4px;
+  width: 14px;
+  height: 14px;
+  background-color: #008d0e;
+  background-image: linear-gradient(315deg, #008d0e 0%, #5cd329 74%);
+  border-radius: 100%;
 }
 /*# sourceMappingURL=mainstyles.css.map */
