--- a/styles/mainstyles.css
+++ b/styles/mainstyles.css
@@ -311,5 +311,24 @@ body {
   background-color: #008d0e;
   background-image: linear-gradient(315deg, #008d0e 0%, #5cd329 74%);
   border-radius: 100%;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  opacity: 1;
+}
+
+[type="radio"]:not(:checked) + label::after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 4px;
+  width: 14px;
+  height: 14px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  opacity: 0;
 }
 /*# sourceMappingURL=mainstyles.css.map */
