--- a/styles/mainstyles.scss
+++ b/styles/mainstyles.scss
@@ -289,4 +289,20 @@ body {
   background-color: #008d0e;
   background-image: linear-gradient(315deg, #008d0e 0%, #5cd329 74%);
   border-radius: 100%;
+  transform: scale(1);
+  transition: all 0.2s ease;
+  opacity: 1;
+}
+
+[type="radio"]:not(:checked) + label::after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 4px;
+  width: 14px;
+  height: 14px;
+  background-color: #fff;
+  border-radius: 100%;
+  transform: scale(0);
+  opacity: 0;
 }
